feat: implementa funcao para renderizar elementos na tela

--- a/index.html
+++ b/index.html
@@ -45,32 +45,7 @@
             />
           </button>
         </article>
-        <article class="scoreboard_times">
-          <div class="scoreboard_times-badge">
-            <img
-              src="./asssets/images/team_shield_a.svg"
-              alt="escudo do time"
-              id="scoreboard_times-badge_img_left"
-            />
-            <span>Time A</span>
-          </div>
-          <div class="scoreboard_times-score">
-            <span id="scoreboard_times-score_left">3</span>
-            <img
-              src="./asssets/images/x.svg"
-              alt="ícone de X utilizado para separar o placar"
-              id="scoreboard_times-badge_img_right"
-            />
-            <span id="scoreboard_times-score_right">0</span>
-          </div>
-          <div class="scoreboard_times-badge">
-            <span>Time B</span>
-            <img
-              src="./asssets/images/team_shield_a.svg"
-              alt="escudo do time"
-            />
-          </div>
-        </article>
+        <div id="scoreboard_times-wrapper"></div>
       </section>
     </main>
     <script src="./asssets/scripts/main.js"></script>
