feat: implementa a funcionalidade de paginacao

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             />
           </button>
         </article>
-        <div id="scoreboard_times-wrapper"></div>
+        <section id="scoreboard_times-wrapper"></section>
       </section>
     </main>
     <script src="./asssets/scripts/main.js"></script>
