feat: implementa logica para escolha de bandeiras do time

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         <section id="scoreboard_times-wrapper"></section>
       </section>
     </main>
-    <script src="./asssets/scripts/main.js"></script>
+    <script type="module" src="./asssets/scripts/main.js"></script>
   </body>
 </html>
